---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/unary.cm
input_file: test_data/arithmetic/unary.cm
---
Fixture: arithmetic/unary.cm
============================================================
Source code:
// Tests various unary operations.
fn test_neg(a: felt) -> felt {
    let c = -a;
    return c;
}

fn test_not(a: bool) -> bool {
    let c = !a;
    return c;
}

fn test_neg_literal() -> felt {
    let c = -42;
    return c;
}

fn test_not_literal_nonzero() -> bool {
    let c = !true;
    return c;
}

fn test_double_neg(a: felt) -> felt {
    let c = --a;
    return c;
}

fn test_not_not(a: bool) -> bool {
    let c = !!a;
    return c;
}

============================================================
Generated CASM:
test_neg:
test_neg:
test_neg_0:
   0: 9 0 1 _              // [fp + 1] = 0
   1: 1 1 -4 -3            // [fp + -3] = [fp + 1] op [fp + -4]
   2: 11 _ _ _             // return
test_not:
test_not:
test_not_0:
   3: 14 -4 3 _            // if [fp + -4] != 0, jump to not_zero_0
   4: 9 1 -3 _             // [fp + -3] = 1
   5: 12 7 _ _             // jump to not_end_1
not_zero_0:
   6: 9 0 -3 _             // [fp + -3] = 0
not_end_1:
   7: 11 _ _ _             // return
test_neg_literal:
test_neg_literal:
test_neg_literal_0:
   8: 9 2147483605 -3 _    // [fp + -3] = 2147483605
   9: 11 _ _ _             // return
test_not_literal_nonzero:
test_not_literal_nonzero:
test_not_literal_nonzero_0:
  10: 9 1 -3 _             // [fp + -3] = true
  11: 11 _ _ _             // return
test_double_neg:
test_double_neg:
test_double_neg_0:
  12: 9 0 2 _              // [fp + 2] = 0
  13: 1 2 -4 0             // [fp + 0] = [fp + 2] op [fp + -4]
  14: 9 0 3 _              // [fp + 3] = 0
  15: 1 3 0 -3             // [fp + -3] = [fp + 3] op [fp + 0]
  16: 11 _ _ _             // return
test_not_not:
test_not_not:
test_not_not_0:
  17: 14 -4 3 _            // if [fp + -4] != 0, jump to not_zero_20
  18: 9 1 0 _              // [fp + 0] = 1
  19: 12 21 _ _            // jump to not_end_21
not_zero_20:
  20: 9 0 0 _              // [fp + 0] = 0
not_end_21:
  21: 14 0 3 _             // if [fp + 0] != 0, jump to not_zero_22
  22: 9 1 -3 _             // [fp + -3] = 1
  23: 12 25 _ _            // jump to not_end_23
not_zero_22:
  24: 9 0 -3 _             // [fp + -3] = 0
not_end_23:
  25: 11 _ _ _             // return
